Fix Some Problems

--- a/faq/index.pug
+++ b/faq/index.pug
@@ -95,7 +95,7 @@ html
                                 li
                                     a(href="../games/index.html") Games
                                 li
-                                    a(href="../faq/index.html") faq	
+                                    a(href="#") faq	
                                 li
                                     a(href="../terms/index.html") terms &amp; conditions
 
@@ -104,7 +104,7 @@ html
                             a(href="../index.html#contact") Contact
 
                         li 
-                            a(href="#").special-btn Join Now 
+                            a(href="#" class="special-btn") Join Now 
 
                     //- ---------------------- Start Burger Icon Box ---------------------- -//
                     .burger-toggler.icon
