--- a/game-page/index.pug
+++ b/game-page/index.pug
@@ -106,7 +106,7 @@ html
                             a(href="../index.html#contact") Contact
 
                         li 
-                            a(href="#").special-btn Join Now 
+                            a(href="#" class="special-btn") Join Now 
 
                     //- ---------------------- Start Burger Icon Box ---------------------- -//
                     .burger-toggler.icon
