--- a/games/index.pug
+++ b/games/index.pug
@@ -95,7 +95,7 @@ html
 
                             ul
                                 li
-                                    a(href="../games/index.html") Games
+                                    a(href="#") Games
                                 li
                                     a(href="../faq/index.html") faq	
                                 li
