--- a/index.pug
+++ b/index.pug
@@ -42,29 +42,29 @@ html
                         .lang 
                             ul
                                 li.drop-down-btn
-                                    img(src="../includes/images/w1.png", alt="flag")
+                                    img(src="includes/images/w1.png", alt="flag")
                                     |English
                                     i.fas.fa-chevron-down
 
                                     ul
                                         li
                                             a(href="")
-                                                img(src="../includes/images/w2.png", alt="flag")
+                                                img(src="includes/images/w2.png", alt="flag")
                                                 |Deutsch
 
                                         li
                                             a(href="")
-                                                img(src="../includes/images/w3.png", alt="flag")
+                                                img(src="includes/images/w3.png", alt="flag")
                                                 |Español
 
                                         li
                                             a(href="")
-                                                img(src="../includes/images/w4.png", alt="flag")
+                                                img(src="includes/images/w4.png", alt="flag")
                                                 |Français
 
                                         li
                                             a(href="")
-                                                img(src="../includes/images/w5.png", alt="flag")
+                                                img(src="includes/images/w5.png", alt="flag")
                                                 |العربية
 
                         //- ---------------------- Start toggler Box ---------------------- -//
@@ -85,28 +85,28 @@ html
                     //- ---------------------- Start Lists Box ---------------------- -//
                     ul.main-lists
                         li
-                            a(href="../index.html") Home
+                            a(href="index.html") Home
 
                         li
-                            a(href="../index.html#about-us") about us
+                            a(href="index.html#about-us") about us
 
                         li.drop-down-btn Pages 
                             i.fas.fa-chevron-down
 
                             ul
                                 li
-                                    a(href="../games/index.html") Games
+                                    a(href="games/index.html") Games
                                 li
-                                    a(href="../faq/index.html") faq	
+                                    a(href="faq/index.html") faq	
                                 li
-                                    a(href="../terms/index.html") terms &amp; conditions
+                                    a(href="terms/index.html") terms &amp; conditions
 
 
                         li
                             a(href="#contact") Contact
 
                         li 
-                            a(href="#").special-btn Join Now 
+                            a(href="#" class="special-btn") Join Now 
 
                     //- ---------------------- Start Burger Icon Box ---------------------- -//
                     .burger-toggler.icon
@@ -128,7 +128,7 @@ html
                         span Get More Fun
                     p(data-aos="fade-up") We Provides For You the best games for your enjoyment, buy, play, and win.
 
-                    a(href="").special-btn Get Started 
+                    a(href="" class="special-btn") Get Started 
                 
                 .image-box(data-aos="zoom-in")
                     img(src="./images/s1.png", alt="")
@@ -238,16 +238,16 @@ html
                     p Log in now and buy the games you want, and don't forget to have fun with your friends.
 
                 .content 
-                    a(href="" data-aos="fade-right") 
+                    a(href="game-page/index.html#pubg" data-aos="fade-right") 
                         .box 
                             .img-box
-                                img(src="./games/images/pubg1.jpg", alt="Game Image")
+                                img(src="./games/images/pubg.jpg", alt="Game Image")
                             
                             .text-box 
                                 h4 Pubg
                                 p Player Unknown's Battlegrounds (PUBG) is an online multiplayer battle royale game developed and published by PUBG Corporation, a subsidiary of South Korean video game company Bluehole.
 
-                    a(href="" data-aos="zoom-in") 
+                    a(href="game-page/index.html#freefire" data-aos="zoom-in") 
                         .box 
                             .img-box
                                 img(src="./games/images/freefire.jpg", alt="Game Image")
@@ -256,10 +256,10 @@ html
                                 h4 Free Fire
                                 p Game play. Garena Free Fire is an online-only action-adventure battle royale game played in a third person perspective.
 
-                    a(href="" data-aos="fade-left") 
+                    a(href="game-page/index.html#callofduty" data-aos="fade-left") 
                         .box 
                             .img-box
-                                img(src="./games/images/call-of-duty.jpg", alt="Game Image")
+                                img(src="./games/images/callofduty.jpg", alt="Game Image")
                             
                             .text-box 
                                 h4 Call of Duty
