--- a/terms/index.pug
+++ b/terms/index.pug
@@ -99,7 +99,7 @@ html
                                 li
                                     a(href="../faq/index.html") faq	
                                 li
-                                    a(href="../terms/index.html") terms &amp; conditions
+                                    a(href="#") terms &amp; conditions
 
 
                         li
