--- a/includes/global-rules/global-rules.css
+++ b/includes/global-rules/global-rules.css
@@ -142,7 +142,7 @@ body.dark {
   font-size: 14px;
   padding: 10px 20px;
   border: 1px solid var(--main-color-1);
-  color: var(--main-color-1);
+  color: var(--main-color-1) !important;
   font-weight: bold;
   letter-spacing: 1px;
   border-radius: 5px;
@@ -152,7 +152,7 @@ body.dark {
 
 .special-btn:hover {
   background: var(--main-color-1);
-  color: #fff;
+  color: #fff !important;
 }
 
 .container {
