--- a/includes/global-rules/global-rules.scss
+++ b/includes/global-rules/global-rules.scss
@@ -128,7 +128,7 @@ body.dark {
   font-size: 14px;
   padding: 10px 20px;
   border: 1px solid var(--main-color-1);
-  color: var(--main-color-1);
+  color: var(--main-color-1) !important;
   font-weight: bold;
   letter-spacing: 1px;
   border-radius: 5px;
@@ -136,7 +136,7 @@ body.dark {
 
   &:hover {
     background: var(--main-color-1);
-    color: #fff;
+    color: #fff !important;
   }
 }
 
