Fix The Fetch Data Problem

--- a/index.pug
+++ b/index.pug
@@ -77,7 +77,7 @@ html
 
                     //- ---------------------- Start logo Box ---------------------- -//
                     .logo
-                        a(href="") 
+                        a(href="#") 
                             h2 
                                 span X
                                 |Games
