--- a/games/index.pug
+++ b/games/index.pug
@@ -75,7 +75,7 @@ html
 
                     //- ---------------------- Start logo Box ---------------------- -//
                     .logo
-                        a(href="") 
+                        a(href="../index.html") 
                             h2 
                                 span X
                                 |Games
